ATC/eks-manifests/weather-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
spec:
  selector:
    matchLabels:
      app: weather-app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: vishnunvv/weather-app:2.0
        ports:
        - containerPort: 3000
