ATC/eks-manifests/weather-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  type: NodePort
  selector:
    app: weather-app  
  ports:       
    - port: 8080
      targetPort: 3000
      protocol: TCP
